testdata/error.ts.out
/main.js:[WILDCARD]
                throw _iteratorError;
                ^
Error: bad
    at foo ([WILDCARD]testdata/error.ts:2:9)
    at bar ([WILDCARD]testdata/error.ts:6:3)
    at eval ([WILDCARD]testdata/error.ts:9:1)
    at Object.eval [as globalEval] (<anonymous>)
    at execute (../runtime.ts:[WILDCARD])
    at FileModule.compileAndRun (../runtime.ts:[WILDCARD]
